[package]
name = "sutera-lib"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
pretty_assertions = "1.4.0"
serde_json = "1.0.117"

[dependencies]
rand_core = { version = "0.6.4", features = ["std"] }
ring-compat = "0.8.0"
serde = { version = "1.0.203", features = ["derive"] }
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.61"
